# cauce-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  SPEC.md  TODO.md  deny.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  release.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  update-agent-context.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
crates/cauce-client-sdk/: Cargo.toml
crates/cauce-client-sdk/src/: error.rs  lib.rs
crates/cauce-client-sdk/src/client/: mod.rs  subscription.rs
crates/cauce-client-sdk/src/config/: auth.rs  mod.rs  reconnect.rs  tls.rs
crates/cauce-client-sdk/src/queue/: mod.rs
crates/cauce-client-sdk/src/router/: mod.rs  tracker.rs
crates/cauce-client-sdk/src/transport/: long_polling.rs  message.rs  mock.rs  mod.rs  polling.rs  sse.rs  webhook.rs  websocket.rs
crates/cauce-client-sdk/tests/: websocket_integration.rs
crates/cauce-core/: Cargo.toml
crates/cauce-core/src/: lib.rs
crates/cauce-core/src/builders/: action_builder.rs  mod.rs  signal_builder.rs
crates/cauce-core/src/constants/: mod.rs
crates/cauce-core/src/errors/: mod.rs  protocol.rs
crates/cauce-core/src/id/: mod.rs
crates/cauce-core/src/jsonrpc/: error.rs  id.rs  mod.rs  notification.rs  request.rs  response.rs
crates/cauce-core/src/matching/: mod.rs
crates/cauce-core/src/methods/: ack.rs  auth.rs  client.rs  enums.rs  hello.rs  mod.rs  ping.rs  publish.rs  schemas.rs  signal_delivery.rs  subscribe.rs  subscription.rs  transport.rs  unsubscribe.rs
crates/cauce-core/src/schemas/: mod.rs
crates/cauce-core/src/types/: action.rs  encrypted.rs  enums.rs  metadata.rs  mod.rs  payload.rs  signal.rs  source.rs  topic.rs
crates/cauce-core/src/validation/: mod.rs  schema.rs
crates/cauce-core/tests/: crate_test.rs  jsonrpc_test.rs  module_test.rs  reexport_test.rs
crates/cauce-server-sdk/: Cargo.toml
crates/cauce-server-sdk/src/: error.rs  lib.rs
crates/cauce-server-sdk/src/auth/: mod.rs
crates/cauce-server-sdk/src/config/: limits.rs  mod.rs  redelivery.rs  transports.rs
crates/cauce-server-sdk/src/delivery/: memory.rs  mod.rs  redelivery.rs
crates/cauce-server-sdk/src/rate_limit/: mod.rs
crates/cauce-server-sdk/src/routing/: default.rs  mod.rs
crates/cauce-server-sdk/src/server/: mod.rs  state.rs
crates/cauce-server-sdk/src/session/: memory.rs  mod.rs
crates/cauce-server-sdk/src/subscription/: memory.rs  mod.rs  trie.rs
crates/cauce-server-sdk/src/transport/: message.rs  mod.rs  polling.rs  sse.rs  webhook.rs  websocket.rs
crates/cauce-server-sdk/tests/: integration_test.rs
docs/: ARCHITECTURE.md  README.md
examples/hub-server/: Cargo.toml
examples/hub-server/src/: main.rs
examples/publisher/: Cargo.toml
examples/publisher/src/: main.rs
examples/subscriber/: Cargo.toml
examples/subscriber/src/: main.rs
specs/001-repo-setup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-setup/checklists/: requirements.md
specs/002-ci-cd-pipeline/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ci-cd-pipeline/checklists/: requirements.md
specs/003-docs-setup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-docs-setup/checklists/: requirements.md
specs/004-cauce-core/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cauce-core/checklists/: requirements.md
specs/005-core-types/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-core-types/checklists/: requirements.md
specs/006-jsonrpc-types/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-jsonrpc-types/checklists/: requirements.md
specs/007-phase2-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-phase2-completion/checklists/: requirements.md
specs/007-phase2-completion/contracts/: public-api.md
