[package]
name = "cauce-core"
version = "0.1.0"
description = "Core types and utilities for the Cauce Protocol"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonschema = { workspace = true }
regex = "1.10"
once_cell = { workspace = true }

[dev-dependencies]
# Test dependencies will be added as needed
