[package]
name = "cauce-server-sdk"
version = "0.1.0"
description = "Server SDK for the Cauce Protocol - async Rust server for implementing Cauce Hubs"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
# Core types from cauce-core
cauce-core = { path = "../cauce-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# HTTP client (for outbound webhooks)
reqwest = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Futures utilities
futures = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# HTTP server framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Concurrent data structures
dashmap = "6.1"

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.5"
wiremock = "0.6"
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
