[package]
name = "publisher"
version = "0.1.0"
description = "Example Cauce Protocol publisher (adapter client)"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "publisher"
path = "src/main.rs"

[dependencies]
cauce-client-sdk = { path = "../../crates/cauce-client-sdk" }
cauce-core = { path = "../../crates/cauce-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
serde_json = { workspace = true }
